--- a/src/main/resources/templates/INFORMES/ficha_baja.html
+++ b/src/main/resources/templates/INFORMES/ficha_baja.html
@@ -194,9 +194,7 @@
                                 </th>
                             </tr>
                             <tr>
-                                <td th:utext="${baja.recomendacion_baja+'<br><br>EN CUANTO PUEDO INFORMAR PARA FINES CONSIGUIENTES.<br><br>Cc/archivos DHS'}" style="text-transform: uppercase; text-align: justify;">
-
-                                </td>
+                                <td th:utext="${baja.recomendacion_baja+'<br><br>EN CUANTO PUEDO INFORMAR PARA FINES CONSIGUIENTES.<br><br>Cc/archivos DHS'}" style="text-transform: uppercase; text-align: justify;"></td>
                             </tr>
                             <!-- <tr>
                                 <td style="text-transform: uppercase; text-align: justify;">
